api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-api
spec:
  selector:
    matchLabels:
      app: ledger
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: ledger
        tier: backend
    spec:
      containers:
      - name: ledger-api
        image: yunling2003/ledger-api:v1
        resources:
          limits:
            memory: "100Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
