web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-web
spec:
  selector:
    matchLabels:
      app: ledger
      tier: frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: ledger
        tier: frontend
    spec:
      containers:
      - name: ledger-web
        image: yunling2003/ledger-web:v2  
        imagePullPolicy: Always      
        resources:
          limits:
            memory: "100Mi"
            cpu: "100m"
        ports:
        - containerPort: 8001
