api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ledger-api-service
spec:
  selector:
    app: ledger
    tier: backend
  ports:
  - port: 8080
    targetPort: 8080
