db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ledger-db-service
spec:
  selector:
    app: ledger
    tier: db
  ports:
  - port: 27017
    targetPort: 27017
