web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ledger-web-service
spec:
  selector:
    app: ledger
    tier: frontend
  ports:
  - port: 8001
    targetPort: 8001
